--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe width="640" height="360" src="https://www.youtube.com/embed/Gp7BjVvWDlo?ecver=1" frameborder="0" allowfullscreen></iframe>
+<div style="position:relative;height:0;padding-bottom:56.25%"><iframe width="640" height="360" src="https://www.youtube.com/embed/Gp7BjVvWDlo?ecver=1" frameborder="0" allowfullscreen></iframe></div>
